--- a/class/class 2/index.html
+++ b/class/class 2/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- NAVIGATION -->
     <nav class="navbar navbar-light bg-light">
-      <a href="/" class="navbar-brand">Product App</a>
+      <a href="#" class="navbar-brand">Product App</a>
     </nav>
 
     <!-- CONTAINER -->
@@ -21,7 +21,7 @@
         <div class="col-m-4">
           <div class="card">
             <div class="card-header">
-              <h4>Add a product</h4>
+              <h4>New Product</h4>
             </div>
             <form id="product-form" class="card-body">
               <div class="form-group">
@@ -53,13 +53,9 @@
           </div>
         </div>
         <!-- TABLE -->
-        <div id="product-list" class="col-md-8">
-
-        </div>
+        <div id="product-list" class="col-md-8"></div>
       </div>
     </div>
-
-    <!-- <script type="module" src="js/class/product.js"></script> -->
     <script src="./js/index.js"></script>
   </body>
 </html>
